RESOLVED FIXED83053
Fix MediaSource LayoutTests to work with new XHR behavior
https://bugs.webkit.org/show_bug.cgi?id=83053
Summary Fix MediaSource LayoutTests to work with new XHR behavior
Aaron Colwell
Reported 2012-04-03 11:27:30 PDT
At some point XHR behavior changed so that the 'arraybuffer' responseType could not be used with synchronous XHR requests. The LayoutTests for the MediaSource API rely on being able to make synchronous XHR requests that returned ArrayBuffer responses. This bug is for patches to fix the LayoutTests so they work with the new XHR behavior. These LayoutTests will also be enabled for Chromium by default so that such breakages can be detected earlier.
Attachments
Patch (12.89 KB, patch)
2012-04-03 11:46 PDT, Aaron Colwell
no flags
Archive of layout-test-results from ec2-cr-linux-03 (6.61 MB, application/zip)
2012-04-03 13:26 PDT, WebKit Review Bot
no flags
Removed clusters to make test duration shorter. (13.27 KB, patch)
2012-04-03 14:00 PDT, Aaron Colwell
no flags
Aaron Colwell
Comment 1 2012-04-03 11:46:37 PDT
WebKit Review Bot
Comment 2 2012-04-03 13:25:56 PDT
Comment on attachment 135378 [details] Patch Attachment 135378 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12321328 New failing tests: http/tests/media/media-source/webm/video-media-source-play.html http/tests/media/media-source/webm/video-media-source-seek.html
WebKit Review Bot
Comment 3 2012-04-03 13:26:02 PDT
Created attachment 135408 [details] Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Aaron Colwell
Comment 4 2012-04-03 14:00:51 PDT
Created attachment 135420 [details] Removed clusters to make test duration shorter.
Aaron Colwell
Comment 5 2012-04-06 13:09:22 PDT
ping. Will someone review this please?
WebKit Review Bot
Comment 6 2012-04-06 14:19:48 PDT
Comment on attachment 135420 [details] Removed clusters to make test duration shorter. Clearing flags on attachment: 135420 Committed r113495: <http://trac.webkit.org/changeset/113495>
WebKit Review Bot
Comment 7 2012-04-06 14:20:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.