Tools: Enable MediaSource feature for DumpRenderTree so MediaSource LayoutTests will pass for Chromium. https://bugs.webkit.org/show_bug.cgi?id=83053

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-06
Reviewed by Dimitri Glazkov.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::TestShell):

LayoutTests: Fix MediaSource LayoutTests to work with the new XHR behavior
that requires asynchronous requests for the 'arraybuffer'
responseType.
https://bugs.webkit.org/show_bug.cgi?id=83053

Patch by Aaron Colwell <acolwell@chromium.org> on 2012-04-06
Reviewed by Dimitri Glazkov.

* http/tests/media/media-source/webm/video-media-source-errors.html:
* http/tests/media/media-source/webm/video-media-source-play.html:
* http/tests/media/media-source/webm/video-media-source-seek.html:
* http/tests/media/media-source/webm/video-media-source-state-changes.html:
* http/tests/media/media-source/webm/webm-media-source.js:
(getData.request.onload):
(createClusterGetFunction.return.if):
(createClusterGetFunction):
(loadWebMData):
(getCluster):
(appendCluster):
(getReadyStateName):
(expectSourceState):
(expectReadyState):
* platform/chromium/test_expectations.txt:

Canonical link: https://commits.webkit.org/100820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113495 268f45cc-cd09-0410-ab3c-d52691b4dbfc